--- a/users/client/admin/users.html
+++ b/users/client/admin/users.html
@@ -1,5 +1,5 @@
 <template name="users"> 
-	{{#if isInRole 'admin'}}
+	<!-- {{#if isInRole 'admin'}} -->
 	<div class="main container page textCenter" route="#admin">
 
 	   <table>
@@ -28,5 +28,5 @@
 		  </tbody>
 		</table>
 	</div>
-		{{/if}}
+		<!-- {{/if}} -->
 </template>
