--- a/route/client/route.html
+++ b/route/client/route.html
@@ -17,7 +17,9 @@
 	{{#if route "#docs"}}
 		{{> docs}}
 	{{/if}}
-	
+	{{#if route "#famous"}}
+		{{> famous}}
+	{{/if}}
 	{{#if default}}
 		{{> home}}
 	{{/if}}
