--- a/login/client/login.html
+++ b/login/client/login.html
@@ -1,5 +1,5 @@
 <template name="login">
-    <div class="main container page textCenter " id="loginContent"> 
+    <div class=" container page textCenter " id="loginContent"> 
         <form onsubmit="">
             <div class="loginPage message row">
                 <div class="errorMessage large-12 columns">
