--- a/route/client/route.html
+++ b/route/client/route.html
@@ -20,6 +20,9 @@
 	{{#if route "#famous"}}
 		{{> famous}}
 	{{/if}}
+	{{#if route "#allinone"}}
+		{{> allinone}}
+	{{/if}}
 	{{#if default}}
 		{{> home}}
 	{{/if}}
