--- a/famous/client/famous.html
+++ b/famous/client/famous.html
@@ -1,4 +1,4 @@
 <template name="famous"> 
-	<div id="carousel" class="small-11 small-centered columns">
+	<div id="carousel" class="small-centered columns">
     </div>
 </template>
