added event on home page top bar

--- a/app/client/homepage/homepage.html
+++ b/app/client/homepage/homepage.html
@@ -44,6 +44,7 @@
         <div class="large-6 columns countDown">
             <div class="panel textCenter">
                 <div id="countDown"><h2></h2></div>
+                <div > Game will be start soon</div>
             </div>
         </div>
     </section>
