--- a/route/client/route.html
+++ b/route/client/route.html
@@ -20,8 +20,8 @@
 	{{#if route "#famous"}}
 		{{> famous}}
 	{{/if}}
-	{{#if route "#allinone"}}
-		{{> allinone}}
+	{{#if route "#seeall"}}
+		{{> seeall}}
 	{{/if}}
 	{{#if default}}
 		{{> home}}
