--- a/famous/client/famous.html
+++ b/famous/client/famous.html
@@ -1,6 +1,4 @@
 <template name="famous"> 
-	<div id="carousel" class="small-centered columns">
-    </div>
-    
+	{{> views_EdgeSwapper}}    
 </template>
 
