--- a/allinone/client/allinone.html
+++ b/allinone/client/allinone.html
@@ -1,5 +1,9 @@
 <template name="seeall"> 
 	{{> famous}}
+	<section class="main-section">
+        {{> timeShow}}
+        {{> countDownShow}}
+    </section>
 	{{> docs}}
 	{{> users}}
 </template>
