--- a/time/client/timeClient.html
+++ b/time/client/timeClient.html
@@ -1,9 +1,12 @@
+<template name="timeCount">
+		{{> timeShow}}
+        {{> countDownShow}}
+</template>
 <template name="timeShow">
 	<div class="large-6 columns daTe">
             <div class="panel textCenter">
                 <div id="timeView"><h2></h2></div>
-                <div id="dateView"></div>
-                
+                <div id="dateView"></div>                
             </div>
         </div>
 </template>
