morpher js added

--- a/route/client/route.html
+++ b/route/client/route.html
@@ -23,6 +23,9 @@
 	{{#if route "#seeall"}}
 		{{> seeall}}
 	{{/if}}
+	{{#if route "#morpher"}}
+		{{> morpher}}
+	{{/if}}
 	{{#if default}}
 		{{> home}}
 	{{/if}}
