--- a/seeall/client/seeall.html
+++ b/seeall/client/seeall.html
@@ -1,6 +1,3 @@
-<template name="seeall"> 
-	{{> famous}}
-	{{> timeCount}}
-	{{> docs}}
-	{{> users}}
-</template>
+<!-- <template name="seeall"> 
+	{{all}}
+</template> -->
