--- a/app/client/homepage/homepage.html
+++ b/app/client/homepage/homepage.html
@@ -33,19 +33,7 @@
     </aside>
 
     <section class="main-section">
-        <div class="large-6 columns daTe">
-            <div class="panel textCenter">
-                <div id="timeView"><h2></h2></div>
-                <div id="dateView"></div>
-                
-            </div>
-        </div>
-        <div class="large-6 columns countDown">
-            <div class="panel textCenter">
-                <div id="countDown"><h2></h2></div>
-                <div > Game will be start soon</div>
-            </div>
-        </div>     
+        {{> timeCount}}  
     </section>
 
   <a class="exit-off-canvas"></a>
