--- a/route/client/route.html
+++ b/route/client/route.html
@@ -1,4 +1,4 @@
-<template name="route">
+<!-- <template name="route">
 	{{#if route "#home"}}
 		{{> home}}
 	{{/if}}
@@ -31,4 +31,4 @@
 	{{/if}}
 	
 </template>
-
+ -->
