ramdom img fixed

--- a/famous/client/demo.html
+++ b/famous/client/demo.html
@@ -8,7 +8,7 @@
 		{{> content}}
 	{{/Surface}}
 </template>
-<template name="es_surface2">
+<!-- <template name="es_surface2">
 	{{#Surface size="[undefined,undefined]"}}
 		{{> content}}
 	{{/Surface}}
@@ -17,7 +17,7 @@
 	{{#Surface size="[undefined,undefined]"}}
 		{{> content}}
 	{{/Surface}}
-</template>
+</template> -->
 
 <template name="content"> 
 	<div id="clickEvent"> 
