--- a/time/client/timeClient.html
+++ b/time/client/timeClient.html
@@ -13,8 +13,8 @@
 <template name="countDownShow">
 	<div class="large-6 columns countDown">
             <div class="panel textCenter">
+                <div id="countDownText"> Game will be started in</div>
                 <div id="countDown"><h2></h2></div>
-                <div > Game will be start soon</div>
             </div>
         </div>
 </template>
