--- a/famous/client/famous.html
+++ b/famous/client/famous.html
@@ -1,5 +1,6 @@
-<template name="famous"> 
-	{{> gamePopUp}}   
-	{{> views_EdgeSwapper}} 
+<template name="famous">
+	{{> views_EdgeSwapper}}
 </template>
+<!-- {{> views_EdgeSwapper}} -->
+<!-- {{> transition}} -->
 
