--- a/app/client/homepage/homepage.html
+++ b/app/client/homepage/homepage.html
@@ -17,5 +17,7 @@
          {{/if}}       
       </ul>  
     </div>
+    <div class=" small-12 columns ">
       {{> famous}}
+    </div>
 </template>
