--- a/famous/client/famous.html
+++ b/famous/client/famous.html
@@ -1,9 +1,10 @@
 <template name="famous"> 
-	{{> gamePopUp}}
-	{{> views_EdgeSwapper}}
+	<div class="famousWrapper">
+		{{> views_EdgeSwapper}}
+	</div>
 </template>
 <!-- 
-
+	{{> gamePopUp}}
 	{{> GamerTimerimer}}
 
  -->
