--- a/famous/client/gameTimer/gameTimer.html
+++ b/famous/client/gameTimer/gameTimer.html
@@ -1,5 +1,5 @@
 <template name="GamerTimerimer">
-	<div class="row">
+	<div class="large-4 small-12 medium-6 columns">
 		<div class="small-3 columns testRight">Score</div>
 		<div class="small-3 columns">0</div>
 		<div class="small-3 columns testRight">Time</div>
