--- a/time/client/timeClient.html
+++ b/time/client/timeClient.html
@@ -3,7 +3,7 @@
         {{> countDownShow}}
 </template>
 <template name="timeShow">
-	<div class="large-6 columns daTe">
+	<div class="large-4 small-12 medium-6  columns daTe">
             <div class="panel textCenter">
                 <div id="timeView"><h2></h2></div>
                 <div id="dateView"></div>                
@@ -11,7 +11,7 @@
         </div>
 </template>
 <template name="countDownShow">
-	<div class="large-6 columns countDown">
+	<div class="large-4 small-12 medium-6  columns countDown">
             <div class="panel textCenter">
                 <div id="countDownText"> Game will be started in</div>
                 <div id="countDown"><h2></h2></div>
