--- a/app/client/homepage/homepage.html
+++ b/app/client/homepage/homepage.html
@@ -1,6 +1,6 @@
 <template name="home"> 
          {{> timeCount}} 
-    <div class=" small-12 columns panel">
+    <div class="large-4 small-12 medium-6 columns panel">
       <ul id="MenuRole" class="off-canvas-list">
         <li class=""><label>Menu</label></li>
         {{#if user}}
@@ -17,7 +17,5 @@
          {{/if}}       
       </ul>  
     </div>
-    <div class=" small-12 columns ">
       {{> famous}}
-    </div>
 </template>
