--- a/app/client/homepage/homepage.html
+++ b/app/client/homepage/homepage.html
@@ -8,12 +8,12 @@
             <li><a href="#admin">Admin</a></li>
             <li><a href="#users">Users</a></li>
             <li><a href="#home">home</a></li>
-            <li><a href="#login" id="LogoutApp">Logout</a></li>
+            <li><a href="#home" id="LogoutApp">Logout</a></li>
         {{else}}
             <li><a href="#admin">Admin</a></li>
             <li><a href="#users">Users</a></li>
             <li><a href="#home">home</a></li>
-            <li><a href="#login">login</a></li>
+            <li><a id="loginScreenFacebook">Facebook Login</a></li>
          {{/if}}       
       </ul>  
     </div>
