--- a/famous/client/famous.html
+++ b/famous/client/famous.html
@@ -1,7 +1,11 @@
 <template name="famous"> 
 	{{> gamePopUp}}
-	{{> content}}
-	{{> GamerTimerimer}}
+
+    <div class="large-4 small-12 medium-6 columns panel">
+		{{> GamerTimerimer}}
+	
+		{{> content}}
+	</div>
 </template>
 <!-- 
 	{{> gamePopUp}}
