--- a/famous/client/demo.html
+++ b/famous/client/demo.html
@@ -48,9 +48,9 @@
 	</div>
 </template>
 <template name="content"> 
-	<div id="clickEvent"> 
+	<div id="clickEvent" class="large-12 small-12 medium-12 columns"> 
 		{{#each image}}
-			<div class="card">
+			<div class="card small-3 columns" >
 		    <figure class="front main">
 		    	{{{first}}}
 		    </figure>
