--- a/big/client/big.html
+++ b/big/client/big.html
@@ -4,10 +4,10 @@
 	    <div data-alert="" class="popups panel large-12 medium-12 columns textCenter">
 	    	<form onsubmit="">
                 <div class="beforeStartGame message row">
-                    <div class="remove testRight">close</div>
+                    <div class="remove testRight">{{lang.gamePopUp.close}}</div>
                     <div class=" large-12 columns">
                         <div class="  panel " style="">
-                            <p>Tap the happiest, most pleasant, most joyful face in the bunch! →</p>
+                            <p>{{lang.gamePopUp.mgs1}}→</p>
                         </div>
                     </div>
                     
@@ -15,7 +15,7 @@
                   
                 <div class=" textCenter large-12 medium-12 columns" style="">    
                     <div id="startGame" class="button ui " style="background:cyan;">            
-                        Start
+                        {{lang.gamePopUp.Start}}
                     </div>
                 </div>
             </form >
