--- a/app/client/homepage/homepage.html
+++ b/app/client/homepage/homepage.html
@@ -7,12 +7,12 @@
             <li><a href="" id="OpenProfile">hi {{myusername}}</a></li>
             <li><a href="#admin">Admin</a></li>
             <li><a href="#users">Users</a></li>
-            <li><a href="#home">home</a></li>
+            <li><a href="#home">{{language.menu.home}}</a></li>
             <li><a href="#login" id="LogoutApp">Logout</a></li>
         {{else}}
             <li><a href="#admin">Admin</a></li>
             <li><a href="#users">Users</a></li>
-            <li><a href="#home">home</a></li>
+            <li><a href="#home">{{language.menu.home}}</a></li>
             <li><a href="#login">login</a></li>
          {{/if}}       
       </ul>  
