--- a/app/client/homepage/homepage.html
+++ b/app/client/homepage/homepage.html
@@ -1,21 +1,5 @@
 <template name="home"> 
-         {{> timeCount}} 
-    <div class="large-4 small-12 medium-6 columns panel">
-      <ul id="MenuRole" class="off-canvas-list">
-        <li class=""><label>Menu</label></li>
-        {{#if user}}
-            <li><a href="" id="OpenProfile">hi {{myusername}}</a></li>
-            <li><a href="#admin">Admin</a></li>
-            <li><a href="#users">Users</a></li>
-            <li><a href="#home">home</a></li>
-            <li><a href="#login" id="LogoutApp">Logout</a></li>
-        {{else}}
-            <li><a href="#admin">Admin</a></li>
-            <li><a href="#users">Users</a></li>
-            <li><a href="#home">home</a></li>
-            <li><a href="#login">login</a></li>
-         {{/if}}       
-      </ul>  
-    </div>
-      {{> famous}}
+    {{> timeCount}} 
+    {{> menuListPanel}}
+    {{> famous}}
 </template>
