--- a/famous/client/famous.html
+++ b/famous/client/famous.html
@@ -2,9 +2,9 @@
 
     <div class="large-4 small-12 medium-6 columns panel">
 	{{> gamePopUp}}
-		{{> GamerTimerimer}}
-	
-		{{> content}}
+	{{> gameEndPopUp}}
+	{{> GamerTimerimer}}
+	{{> content}}
 	</div>
 </template>
 <!-- 
