--- a/famous/client/gameTimer/gameTimer.html
+++ b/famous/client/gameTimer/gameTimer.html
@@ -1,12 +1,12 @@
 <template name="GamerTimerimer">
 	<div class="large-12 small-12 medium-12 columns">
 		<div class="small-3 columns testRight">Score</div>
-		<div class="small-3 columns">0</div>
+		<div class="small-3 columns myScore">0</div>
 		<div class="small-3 columns testRight">Time</div>
 		<div id="gametime" class="small-3 columns end">
 			<!-- <div id="gametimehours"></div> -->
-			<div id="gametimemins"></div>
-			<div id="gametimeseconds"></div>
+			<div class="gametimemins"></div>
+			<div class="gametimeseconds"></div>
 		</div>
 	</div>
 </template>
