--- a/famous/client/gameTimer/gameTimer.html
+++ b/famous/client/gameTimer/gameTimer.html
@@ -5,8 +5,8 @@
 		<div class="small-3 columns testRight">Time</div>
 		<div id="gametime" class="small-3 columns end">
 			<!-- <div id="gametimehours"></div> -->
-			<div class="gametimemins"></div>
-			<div class="gametimeseconds"></div>
+			<div class="gametimemins">00:</div>
+			<div class="gametimeseconds">00</div>
 		</div>
 	</div>
 </template>
