--- a/menu/client/menu.html
+++ b/menu/client/menu.html
@@ -51,7 +51,7 @@
         </ul>  
     </div>
     <div class="large-4 small-12 medium-6 columns panel">
-        <label>with whome you wanna share your score ..
+        <label>Email my wife
             <textarea id="getEmails" placeholder="Enter Emails.."></textarea>
         </label>
     </div>
