--- a/app/client/homepage/homepage.html
+++ b/app/client/homepage/homepage.html
@@ -1,5 +1,7 @@
 <template name="home"> 
+	<div class="column large-12 small-12 medium-12 scrolly">
     {{> timeCount}} 
     {{> menuListPanel}}
     {{> famous}}
+    </div>
 </template>
