--- a/time/client/timeClient.html
+++ b/time/client/timeClient.html
@@ -3,8 +3,8 @@
         {{> countDownShow}}
 </template>
 <template name="timeShow">
-	<div class="large-4 small-12 medium-6  columns daTe">
-            <div class="panel textCenter">
+	<div class="large-4 small-12 medium-6  columns daTe panel">
+            <div class=" textCenter">
                 <div id="timeView"><h2></h2></div>
                 <div id="dateView"></div>                
             </div>
