--- a/time/client/timeClient.html
+++ b/time/client/timeClient.html
@@ -11,8 +11,8 @@
         </div>
 </template>
 <template name="countDownShow">
-	<div class="large-4 small-12 medium-6  columns countDown">
-            <div class="panel textCenter">
+	<div class="large-4 small-12 medium-6  columns countDown panel">
+            <div class=" textCenter">
                 <div id="countDownText"> Game will be started in</div>
                 <div id="countDown"><h2></h2></div>
             </div>
