--- a/famous/client/gameTimer/gameTimer.html
+++ b/famous/client/gameTimer/gameTimer.html
@@ -1,9 +1,9 @@
 <template name="GamerTimerimer">
-	<div class="large-12 small-12 medium-12 columns">
+	<div class="large-4 small-12 medium-6 columns panel">
 		<div class="small-3 columns testRight">Score</div>
-		<div class="small-3 columns myScore">0</div>
+		<div class="small-2 columns myScore">0</div>
 		<div class="small-3 columns testRight">Time</div>
-		<div id="gametime" class="small-3 columns end">
+		<div id="gametime" class="small-4 columns end">
 			<!-- <div id="gametimehours"></div> -->
 			<div class="gametimemins">00:</div>
 			<div class="gametimeseconds">00</div>
