--- a/menu/client/menu.html
+++ b/menu/client/menu.html
@@ -51,13 +51,13 @@
             <li>
                 <a href="#" class="height40">
                     <lable class="large-11 small-11 medium-11 columns ">Days in a Row</lable>
-                    <lable class="large-1 small-1 medium-1 columns playContinuty">0</lable>
+                    <lable class="large-1 small-1 medium-1 columns playContinuty">{{profile.playContinuty}}</lable>
                 </a>
             </li>
             <li>
                 <a href="#" class="height40">
                     <lable class="large-11 small-11 medium-11 columns">Max Score</lable>
-                    <lable class="large-1 small-1 medium-1 columns maxScore">0</lable>
+                    <lable class="large-1 small-1 medium-1 columns maxScore">{{profile.maxScore}}</lable>
                 </a>
             </li>
         </ul>  
