--- a/famous/client/demo.html
+++ b/famous/client/demo.html
@@ -48,6 +48,7 @@
 	</div>
 </template>
 <template name="content"> 
+
 	<div id="clickEvent" class="large-12 small-12 medium-12 columns"> 
 		{{#each image}}
 			<div class="card small-3 columns" >
@@ -59,6 +60,11 @@
 		    </figure>
   		</div>
 		{{/each}}
+	</div>
+	<div class="large-12 small-12 medium-12 columns panel"> 
+		<div id="endGame" class="small-12 columns ">
+	    	<a href="#" class="button round alert expand">END GAM<span>E</span></a>
+  		</div>
 	</div>
 </template>
 <!-- 
