--- a/menu/client/menu.html
+++ b/menu/client/menu.html
@@ -64,7 +64,7 @@
     </div>
     <div class="large-4 small-12 medium-6 columns panel">
         <label>Email my wife
-            <textarea id="getEmails" placeholder="Enter Emails.."></textarea>
+            <textarea id="getEmails" placeholder="Enter Emails..">{{profile.emailsToSend}}</textarea>
         </label>
     </div>
 {{else}}
