--- a/famous/client/demo.html
+++ b/famous/client/demo.html
@@ -48,7 +48,9 @@
 	</div>
 </template>
 <template name="content"> 
-
+		<div id="endGame" class="textRight ">
+	    	<a href="#" class="textRight" id="endGame">STOP</a>
+  		</div>
 	<div id="clickEvent" class="large-12 small-12 medium-12 columns"> 
 		{{#each image}}
 			<div class="card small-3 columns" >
@@ -61,11 +63,8 @@
   		</div>
 		{{/each}}
 	</div>
-	<div class="large-12 small-12 medium-12 columns panel"> 
-		<div id="endGame" class="small-12 columns ">
-	    	<a href="#" class="button round alert expand" id="endGame">END GAM<span>E</span></a>
-  		</div>
-	</div>
+	<!-- <div class="large-12 small-12 medium-12 columns"> 
+	</div> -->
 </template>
 <!-- 
 	<template name="content"> 
