--- a/menu/client/menu.html
+++ b/menu/client/menu.html
@@ -34,18 +34,18 @@
     </div>
          
     <div class="large-4 small-12 medium-6 columns panel textCenter">
-        <ul id="MenuRole" class="off-canvas-list">
+        <ul id="" class="off-canvas-list">
             <li><a href="" id="OpenProfile">hi {{myusername}}</a></li>
             <li>
                 <a href="#" class="height40">
                     <lable class="large-10 small-10 medium-10 columns ">Days in a Row</lable>
-                    <lable class="large-2 small-2 medium-2 columns playContinuty textCenter">{{profile.playContinuty}}</lable>
+                    <lable class="large-2 small-2 medium-2 columns playContinuty ">{{profile.playContinuty}}</lable>
                 </a>
             </li>
             <li>
                 <a href="#" class="height40">
                     <lable class="large-10 small-10 medium-10 columns">Max Score</lable>
-                    <lable class="large-2 small-2 medium-2 columns maxScore textCenter">{{profile.maxScore}}</lable>
+                    <lable class="large-2 small-2 medium-2 columns maxScore ">{{profile.maxScore}}</lable>
                 </a>
             </li>
         </ul>  
@@ -59,5 +59,8 @@
     <div class="large-4 small-12 medium-6 columns panel textCenter">
         <a href="#login">Login</a>
     </div>
- {{/if}}       
+ {{/if}}   
+ <div class="large-4 small-12 medium-6 columns ">
+        {{> GamerTimerimer}}
+    </div>    
 </template>
