removed items in menu

--- a/menu/client/menu.html
+++ b/menu/client/menu.html
@@ -16,7 +16,7 @@
          {{/if}}       
         </ul>  
     </div> -->
-    <div class="large-4 small-12 medium-6 columns panel textCenter">
+  <!--   <div class="large-4 small-12 medium-6 columns panel textCenter">
         <a href="#admin">Admin</a>
     </div>
     <div class="large-4 small-12 medium-6 columns panel textCenter">
@@ -24,7 +24,7 @@
     </div>
     <div class="large-4 small-12 medium-6 columns panel textCenter">
         <a href="#home">Home</a>
-    </div>             
+    </div>  -->            
 {{#if user}}
     <div class="large-4 small-12 medium-6 columns panel textCenter">
         <a href="#login" id="LogoutApp">Logout</a>
