--- a/famous/client/gamePopUp/gamePopUp.html
+++ b/famous/client/gamePopUp/gamePopUp.html
@@ -4,7 +4,7 @@
         <div data-alert="" class="popups panel large-12 medium-12 columns textCenter">
             <form onsubmit="">
                 <div class="beforeStartGame message row">
-                    <div class="remove testRight">close</div>
+                    <div class="remove textRight">close</div>
                     <div class=" large-12 columns">
                         <div class="  panel " style="">
                             <p>Tap the happiest, most pleasant, most joyful face in the bunch! →</p>
