--- a/menu/client/menu.html
+++ b/menu/client/menu.html
@@ -60,7 +60,7 @@
         <a href="#login">Login</a>
     </div>
  {{/if}}   
- <div class="large-4 small-12 medium-6 columns ">
+ <div class="large-4 small-12 medium-6 columns panel">
         {{> GamerTimerimer}}
     </div>    
 </template>
