--- a/menu/client/menu.html
+++ b/menu/client/menu.html
@@ -59,6 +59,9 @@
     <div class="large-4 small-12 medium-6 columns panel textCenter">
         <a href="#login">Login</a>
     </div>
+     <div class="whiteText large-4 small-12 medium-6 columns panel textCenter" >
+        <a href="#login">Login with Facebook</a>
+    </div>
  {{/if}}   
  <div class="large-4 small-12 medium-6 columns panel">
         {{> GamerTimerimer}}
