--- a/menu/client/menu.html
+++ b/menu/client/menu.html
@@ -56,8 +56,8 @@
         </label>
     </div>
 {{else}}
-    <div class="large-4 small-12 medium-6 columns panel textCenter">
-        <a href="#login">Login</a>
+    <div id="loginScreenFacebook" class="large-4 small-12 medium-6 columns panel textCenter">
+        <a href="#">Login</a>
     </div>
  {{/if}}   
  <div class="large-4 small-12 medium-6 columns panel">
