--- a/app/client/profile/profile.html
+++ b/app/client/profile/profile.html
@@ -1,5 +1,11 @@
 <template name="profile">
-	<div class="large-4 small-10 medium-6 columns text-center panel">
-        <a href="#">Login</a>
+	<div class="large-4 small-12 medium-6 columns text-center">
+        <a href="#">{{user.username}}</a>
     </div>
+    <div class="large-4 small-12 medium-6 columns text-center">
+        <div class="large-4 small-12 medium-6 columns text-center">
+        
+    	</div>
+    </div>
+
 </template>
