--- a/menu/client/menu.html
+++ b/menu/client/menu.html
@@ -50,8 +50,10 @@
                 </a>
             </li>
             <li class="textRight">
-                <lable class="large-2 small-2 medium-2 columns">Email</lable>
-                <lable class="large-10 small-10 medium-10 columns">{{myEmail}}</lable>
+                <a href="#" class="height40">
+                    <lable class="large-2 small-2 medium-2 columns">Email</lable>
+                    <lable class="large-10 small-10 medium-10 columns">{{myEmail}}</lable>
+                </a>                
             </li>
         </ul>  
     </div>
