--- a/app/client/profile/profile.html
+++ b/app/client/profile/profile.html
@@ -3,9 +3,13 @@
         <a href="#">{{user.username}}</a>
     </div>
     <div class="large-4 small-12 medium-6 columns text-center">
-        <div class="large-4 small-12 medium-6 columns text-center">
-        
+    	<div class="text-center">
+        	
     	</div>
+        <div class="text-center">
+        	Played(days)
+    	</div>
+
     </div>
 
-</template>
+</template> 
