--- a/menu/client/menu.html
+++ b/menu/client/menu.html
@@ -43,6 +43,12 @@
                     <lable class="large-2 small-2 medium-2 columns playContinuty ">{{profile.playContinuty}}</lable>
                 </a>
             </li>
+          <!--   <li>
+                <a href="#" class="height40">
+                    <lable class="large-10 small-10 medium-10 columns">Last seen</lable>
+                    <lable class="large-2 small-2 medium-2 columns ">{{profile.lastPlayed}}</lable>
+                </a>
+            </li> -->
             <li>
                 <a href="#" class="height40">
                     <lable class="large-10 small-10 medium-10 columns">Max Score</lable>
@@ -63,9 +69,9 @@
         </label>
     </div>
 {{else}}
-    <div id="loginScreenFacebook" class="large-4 small-12 medium-6 columns panel textCenter">
+    <!-- <div id="loginScreenFacebook" class="large-4 small-12 medium-6 columns panel textCenter">
         <a href="#">Login</a>
-    </div>
+    </div> -->
      <div class="large-4 small-12 medium-6 columns panel textCenter" >
         <a>
             <i class="fa fa-facebook"></i> Sign in with Facebook
