center square added

--- a/famous/client/famous.html
+++ b/famous/client/famous.html
@@ -1,8 +1,8 @@
 <template name="famous"> 
     
     <div class="large-4 small-12 medium-6 columns panel">
-		<!-- {{> gamePopUp}}
-		{{> gameEndPopUp}}	 -->	
+		{{> gamePopUp}}
+		{{> gameEndPopUp}}		
 		{{> content}}
 	</div>
 </template>
