--- a/famous/client/gamePopUp/gamePopUp.html
+++ b/famous/client/gamePopUp/gamePopUp.html
@@ -29,7 +29,7 @@
 </template>
 <template name="gameEndPopUp">
     <div id="tapTapEnded" class=" overlay">
-            <div data-alert="" class="popups panel large-12 medium-12 columns textCenter">
+            <div data-alert="" class="popups panel large-12 medium-12 small-12 columns textCenter">
                 {{> GamerTimerimer}}
             </div>   
     </div>
