--- a/famous/client/demo.html
+++ b/famous/client/demo.html
@@ -48,9 +48,9 @@
 	</div>
 </template>
 <template name="content"> 
-		<div id="endGame" class="textRight ">
+		<!-- <div id="endGame" class="textRight ">
 	    	<a href="#" class="textRight" id="endGame">STOP</a>
-  		</div>
+  		</div> -->
 	<div id="clickEvent" class="large-12 small-12 medium-12 columns"> 
 		{{#each image}}
 			<div class="card small-3 columns" >
