--- a/famous/client/famous.html
+++ b/famous/client/famous.html
@@ -1,6 +1,6 @@
 <template name="famous"> 
     
-    <div class="large-4 small-12 medium-6 columns panel">
+    <div id="famousSquare" class="large-12 small-12 medium-12 columns panel">
 		{{> gamePopUp}}
 		{{> gameEndPopUp}}		
 		{{> content}}
