--- a/menu/client/menu.html
+++ b/menu/client/menu.html
@@ -33,9 +33,13 @@
         <a href="#login" id="LogoutApp">Not you?</a>
     </div> -->
          
-    <div class="large-4 small-12 medium-6 columns panel">
+    <div class="large-12 small-12 medium-12 columns panel">
         <ul id="" class="off-canvas-list">
-            <li><a href="" id="OpenProfile">Hi, {{myusername}}</a></li>
+            {{#if profile.playContinuty}}
+                <li><a href="" id="OpenProfile">Welcome back {{myusername}}</a></li>
+            {{else}}
+                <li><a href="" id="OpenProfile">Hi, {{myusername}}</a></li>
+            {{/if}}
             <li><a href="#login" id="LogoutApp">Not you?</a></li>
             <li>
                 <a href="#" class="height40">
@@ -43,12 +47,12 @@
                     <lable class="large-2 small-2 medium-2 columns playContinuty ">{{profile.playContinuty}}</lable>
                 </a>
             </li>
-          <!--   <li>
+            <li>
                 <a href="#" class="height40">
                     <lable class="large-10 small-10 medium-10 columns">Last seen</lable>
                     <lable class="large-2 small-2 medium-2 columns ">{{profile.lastPlayed}}</lable>
                 </a>
-            </li> -->
+            </li>
             <li>
                 <a href="#" class="height40">
                     <lable class="large-10 small-10 medium-10 columns">Max Score</lable>
@@ -63,22 +67,22 @@
             </li>
         </ul>  
     </div>
-    <div class="large-4 small-12 medium-6 columns panel">
-        <label>Email my wife
-                 <textarea id="getEmails" placeholder="" value="">{{#each list}}{{ids}},{{/each}}</textarea>
+    <div class="large-12 small-12 medium-12 columns panel">
+        <label>Challange Someone!
+                 <textarea id="getEmails" placeholder="Enter emails..." value="">{{#each list}}{{ids}},{{/each}}</textarea>
         </label>
     </div>
 {{else}}
     <!-- <div id="loginScreenFacebook" class="large-4 small-12 medium-6 columns panel textCenter">
         <a href="#">Login</a>
     </div> -->
-     <div class="large-4 small-12 medium-6 columns panel textCenter" >
+     <div class="large-12 small-12 medium-12 columns panel textCenter" >
         <a>
             <i class="fa fa-facebook"></i> Sign in with Facebook
           </a>
     </div>
  {{/if}}   
- <div class="large-4 small-12 medium-6 columns panel">
+ <div class="large-12 small-12 medium-12 columns panel">
         {{> GamerTimerimer}}
     </div>    
 </template>
