--- a/menu/client/menu.html
+++ b/menu/client/menu.html
@@ -76,10 +76,10 @@
     <!-- <div id="loginScreenFacebook" class="large-4 small-12 medium-6 columns panel textCenter">
         <a href="#">Login</a>
     </div> -->
-     <div class="large-12 small-12 medium-12 columns panel textCenter" >
+     <div id="loginScreenFacebook" class="large-12 small-12 medium-12 columns panel textCenter" >
         <a>
             <i class="fa fa-facebook"></i> Sign in with Facebook
-          </a>
+        </a>
     </div>
  {{/if}}   
  <div class="large-12 small-12 medium-12 columns panel">
