--- a/menu/client/menu.html
+++ b/menu/client/menu.html
@@ -68,7 +68,7 @@
         </ul>  
     </div>
     <div class="large-12 small-12 medium-12 columns panel">
-        <label>Challange Someone!
+        <label><h5>Challange Someone!</h5>To invite and share.
                  <textarea id="getEmails" placeholder="Enter emails..." value="">{{#each list}}{{ids}},{{/each}}</textarea>
         </label>
     </div>
