--- a/menu/client/menu.html
+++ b/menu/client/menu.html
@@ -35,11 +35,7 @@
          
     <div class="large-12 small-12 medium-12 columns panel">
         <ul id="" class="off-canvas-list">
-            {{#if profile.playContinuty}}
-                <li><a href="" id="OpenProfile">Welcome back {{myusername}}</a></li>
-            {{else}}
-                <li><a href="" id="OpenProfile">Hi, {{myusername}}</a></li>
-            {{/if}}
+                <li><a href="" id="OpenProfile">{{welcome}} {{myusername}}</a></li>
             <li><a href="#login" id="LogoutApp">Not you?</a></li>
             <li>
                 <a href="#" class="height40">
