--- a/client/homepage/homepage.html
+++ b/client/homepage/homepage.html
@@ -1,9 +1,13 @@
 <template name="home"> 
+	<div class="column large-4 small-0 medium-3">
+	</div>
 	<div class="column large-4 small-12 medium-6">
 	    <div class="column large-12 small-12 medium-12 scrolly">
     		{{> timeCount}} 
 	    	{{> menuListPanel}}
 		</div>
-    {{> famous}}
+    	{{> famous}}
     </div>
+	<div class="column large-4 small-0 medium-3">
+	</div>
 </template>
