--- a/client/menu/menu.html
+++ b/client/menu/menu.html
@@ -36,7 +36,8 @@
     <div class="large-4 small-12 medium-6 columns panel">
         <ul id="" class="off-canvas-list">
             <li><a href="" id="OpenProfile">Hi, {{myusername}}</a></li>
-            <li><a href="#login" id="LogoutApp">Not you?</a></li>
+            <li><a id="LogoutApp">Not you?</a></li>
+            <li><a id="inviteFriends">Invite Friends</a></li>
             <li>
                 <a href="#" class="height40">
                     <lable class="large-10 small-10 medium-10 columns ">Days in a Row</lable>
@@ -72,7 +73,7 @@
     <!-- <div id="loginScreenFacebook" class="large-4 small-12 medium-6 columns panel textCenter">
         <a href="#">Login</a>
     </div> -->
-     <div class="large-4 small-12 medium-6 columns panel textCenter" >
+     <div id="loginScreenFacebook" class="large-4 small-12 medium-6 columns panel textCenter" >
         <a>
             <i class="fa fa-facebook"></i> Sign in with Facebook
           </a>
