--- a/client/famous/gameTimer/gameTimer.html
+++ b/client/famous/gameTimer/gameTimer.html
@@ -1,4 +1,5 @@
 <template name="GamerTimerimer">
+		<h7>This Game:</h7>
 	<div class="">
 		<div class="large-4 small-4 medium-4 columns testRight">Score</div>
 		<div class="large-2 small-2 medium-2 columns myScore">0</div>
