--- a/client/menu/menu.html
+++ b/client/menu/menu.html
@@ -36,7 +36,7 @@
     <div class="large-12 small-12 medium-12 columns panel">
         <ul id="" class="off-canvas-list">
                 <li><a href="" id="OpenProfile">{{welcome}} {{myusername}}</a></li>
-            <li><a href="#login" id="LogoutApp">Not you?</a></li>
+            <li><a href="#" id="LogoutApp">Not you?</a></li>
             <li>
                 <a href="#" class="height40">
                     <lable class="large-10 small-10 medium-10 columns ">Days in a Row</lable>
@@ -67,6 +67,7 @@
         <label><h5>Challange Someone!</h5>To invite and share.
             <textarea id="getEmails" placeholder="Enter emails..." value="">{{#each list}}{{ids}},{{/each}}</textarea>
         </label>
+            Facebook invite.
     </div>
 {{else}}
     <!-- <div id="loginScreenFacebook" class="large-4 small-12 medium-6 columns panel textCenter">
