--- a/client/menu/menu.html
+++ b/client/menu/menu.html
@@ -67,7 +67,7 @@
         <label><h5>Challange Someone!</h5>To invite and share.
             <textarea id="getEmails" placeholder="Enter emails..." value="">{{#each list}}{{ids}},{{/each}}</textarea>
         </label>
-            Facebook invite.
+            <a id="inviteFriends">Invite Friends</a>
     </div>
 {{else}}
     <!-- <div id="loginScreenFacebook" class="large-4 small-12 medium-6 columns panel textCenter">
