--- a/client/menu/menu.html
+++ b/client/menu/menu.html
@@ -63,8 +63,9 @@
             </li>
         </ul>  
     </div>
-    <div class="large-12 small-12 medium-12 columns panel">
-        <label><h5>Challange Someone!</h5>To invite and share.
+    <div class="large-12 small-12 medium-12 columns panel Challange">
+        <h5>Challange Someone!</h5>
+        <label>To invite and share.
             <textarea id="getEmails" placeholder="Enter emails..." value="">{{#each list}}{{ids}},{{/each}}</textarea>
         </label>
             <a id="inviteFriends">Invite Friends</a>
