--- a/client/menu/menu.html
+++ b/client/menu/menu.html
@@ -35,8 +35,12 @@
          
     <div class="large-12 small-12 medium-12 columns panel">
         <ul id="" class="off-canvas-list">
-                <li><a href="" id="OpenProfile">{{welcome}} {{myusername}}</a></li>
-            <li><a href="#" id="LogoutApp">Not you?</a></li>
+            <li><a href="" id="OpenProfile">{{welcome}} {{myusername}}</a></li>
+            <li><a href="#" id="LogoutApp"  class="height40">
+                    <lable class="large-10 small-9 medium-10 columns ">Not you?</lable>
+                    <lable class="large-2 small-3 medium-2 columns playContinuty ">Logout</lable>
+                </a> 
+            </li>
             <li>
                 <a href="#" class="height40">
                     <lable class="large-10 small-10 medium-10 columns ">Days in a Row</lable>
