--- a/client/homepage/homepage.html
+++ b/client/homepage/homepage.html
@@ -2,10 +2,10 @@
 	<div class="column large-4 small-0 medium-3">
 	</div>
 	<div class="column large-4 small-12 medium-6">
-	    <div class="column large-12 small-12 medium-12 scrolly">
-    		{{> timeCount}} 
+	    <!-- <div class="column large-12 small-12 medium-12 scrolly"> -->
+    		<!-- {{> timeCount}}  -->
 	    	{{> menuListPanel}}
-		</div>
+		<!-- </div> -->
     	{{> famous}}
     </div>
 	<div class="column large-4 small-0 medium-3">
