--- a/client/famous/gamePopUp/gamePopUp.html
+++ b/client/famous/gamePopUp/gamePopUp.html
@@ -30,7 +30,10 @@
 <template name="gameEndPopUp">
     <div id="tapTapEnded" class=" overlay">
             <div data-alert="" class="popups panel large-12 medium-12 small-12 columns textCenter">
-                {{> GamerTimerimer}}
+                <!-- {{> GamerTimerimer}} -->
+                <div id="endGame" class="button ui " style="background:cyan;">            
+                        Restart
+                    </div>
             </div>   
     </div>
 </template>
