--- a/client/famous/gameTimer/gameTimer.html
+++ b/client/famous/gameTimer/gameTimer.html
@@ -3,7 +3,7 @@
 	<div class="row">
 		<div class="small-6 large-6 medium-6 columns">This Game</div>
 		<div class="small-4 large-4  medium-4 columns">...</div>
-		<div id="reStart" class="small-1 large-1 medium-1 columns restart textRight">R</div>
+		<!-- <div id="reStart" class="small-1 large-1 medium-1 columns restart textRight">R</div> -->
 		<div id="endGame" class="small-1 large-1 medium-1 columns endGame textRight">X</div>
 	
 	</div>
