--- a/client/menu/menu.html
+++ b/client/menu/menu.html
@@ -38,26 +38,26 @@
         <ul id="" class="off-canvas-list">
             <li><a href="" id="OpenProfile">{{welcome}} {{myusername}}</a></li>
             <li><a href="#" id="LogoutApp"  class="height40">
-                    <lable class="large-9 small-9 medium-9 columns ">Not you?</lable>
-                    <lable class="large-3 small-3 medium-3 columns  ">Logout</lable>
+                    <lable class="large-9 small-4 medium-9 columns ">Not you?</lable>
+                    <lable class="large-3 small-5 medium-3 columns  ">Logout</lable>
                 </a> 
             </li>
             <li>
                 <a href="#" class="height40">
-                    <lable class="large-9 small-9 medium-9 columns ">Days in a Row</lable>
-                    <lable class="large-3 small-3 medium-3 columns  ">{{profile.playContinuty}}</lable>
+                    <lable class="large-9 small-7 medium-9 columns ">Days in a Row</lable>
+                    <lable class="large-3 small-5 medium-3 columns  ">{{profile.playContinuty}}</lable>
                 </a>
             </li>
             <li>
                 <a href="#" class="height40">
-                    <lable class="large-9 small-9 medium-9 columns">Last seen</lable>
-                    <lable class="large-3 small-3 medium-3 columns ">{{profile.lastPlayed}}</lable>
+                    <lable class="large-9 small-4 medium-9 columns">Last seen</lable>
+                    <lable class="large-3 small-5 medium-3 columns " style="font: -webkit-small-control;">{{lastseen}}</lable><!-- {{profile.lastPlayed}} -->
                 </a>
             </li>
             <li>
                 <a href="#" class="height40">
-                    <lable class="large-9 small-9 medium-9 columns">Max Score</lable>
-                    <lable class="large-3 small-3 medium-3 columns ">{{profile.maxScore}}</lable>
+                    <lable class="large-9 small-7 medium-9 columns">Max Score</lable>
+                    <lable class="large-3 small-5 medium-3 columns ">{{profile.maxScore}}</lable>
                 </a>
             </li>
             <li class="textRight">
