--- a/client/menu/menu.html
+++ b/client/menu/menu.html
@@ -15,7 +15,7 @@
         </div>
     </div>
     <div class="row">
-        Thinks of two times ...
+        Think of two times ...
     </div>
 </div> 
 {{#if user}}
