--- a/client/menu/menu.html
+++ b/client/menu/menu.html
@@ -1,7 +1,9 @@
 <template name="menuListPanel">
 <div class="large-12 small-12 medium-12 columns panel">
     <div class="row">
-        Two Alarms
+        <label>           
+            Two Alarms
+        </label>
     </div>
     <div class="row">
         <div class="input-append date large-6 small-6 medium-6 columns" id="dp3"  >
@@ -14,15 +16,15 @@
             <span class="add-on"><i class="icon-th"></i></span>
         </div>
     </div>
-    <div class="row">
-        Think of two times ...
-    </div>
+        <label>
+            Think of two times ...
+        </label>   
 </div> 
 {{#if user}}
          
-    <div class="large-12 small-12 medium-12 columns panel">
+    <div class="large-12 small-12 medium-12 columns panel ">
         <a href="#" id="welcome">{{welcome}}</a>
-        <ul id="" class="off-canvas-list">
+        <ul id="" class="off-canvas-list welcome">
             <li>
                 <a href="#" class="height40">
                     <lable class="large-8 small-7 medium-8 columns" id="OpenProfile">{{myusername}}</lable>
@@ -38,7 +40,7 @@
             <li>
                 <a href="#" class="height40">
                     <lable class="large-9 small-4 medium-9 columns">Last seen</lable>
-                    <lable class="large-3 small-5 medium-3 columns " style="font: -webkit-small-control;">{{lastseen}}</lable><!-- {{profile.lastPlayed}} -->
+                    <lable class="large-3 small-5 medium-3 columns noPadding " style="font: -webkit-small-control;">{{lastseen}}</lable><!-- {{profile.lastPlayed}} -->
                 </a>
             </li>
             <li>
