--- a/client/menu/menu.html
+++ b/client/menu/menu.html
@@ -1,9 +1,9 @@
 <template name="menuListPanel">
 <div class="large-12 small-12 medium-12 columns panel">
     <div class="row">
-        <label>           
+        <!-- <label>            -->
             Two Alarms
-        </label>
+        <!-- </label> -->
     </div>
     <div class="row">
         <div class="input-append date large-6 small-6 medium-6 columns" id="dp3"  >
@@ -17,7 +17,7 @@
         </div>
     </div>
         <label>
-            Think of two times ...
+            {{lang.alarm.foot}}
         </label>   
 </div> 
 {{#if user}}
@@ -45,24 +45,24 @@
             </li>
             <li>
                 <a href="#" class="height40">
-                    <lable class="large-9 small-7 medium-9 columns">Max Score</lable>
+                    <lable class="large-9 small-7 medium-9 columns">{{lang.scorebord.mxscore}}</lable>
                     <lable class="large-3 small-5 medium-3 columns ">{{profile.maxScore}}</lable>
                 </a>
             </li>
             <li class="textRight">
                 <a href="#" class="height40">
-                    <lable class="large-3 small-3 medium-3 columns">Email:</lable>
+                    <lable class="large-3 small-3 medium-3 columns">{{lang.scorebord.email}}:</lable>
                     <lable class="large-9 small-9 medium-9 columns">{{myEmail}}</lable>
                 </a>                
             </li>
         </ul>  
     </div>
     <div class="large-12 small-12 medium-12 columns panel Challange">
-        <h5>Challenge Someone!</h5>
-        <label>To invite and share.
+        <h5>{{lang.email.head}}</h5>
+        <label>{{lang.email.msg1}}
             <textarea id="getEmails" placeholder="Enter emails..." value="">{{#each list}}{{ids}},{{/each}}</textarea>
         </label>
-            <a id="inviteFriends">Invite Friends</a>
+            <a id="inviteFriends">{{lang.email.msg2}}</a>
     </div>
     <div class="large-12 small-12 medium-12 columns panel lastScore">
         <h5>Last score</h5>
