--- a/client/menu/menu.html
+++ b/client/menu/menu.html
@@ -81,7 +81,7 @@
     </div> -->
      <div id="loginScreenFacebook" class="large-12 small-12 medium-12 columns panel textCenter" >
         <a>
-            <i class="fa fa-facebook"></i> Sign in with Facebook
+            <i class="fa fa-facebook"></i> {{lang.menu.fbLogin}}
         </a>
     </div>
  {{/if}}   
