--- a/client/menu/menu.html
+++ b/client/menu/menu.html
@@ -14,6 +14,7 @@
             <span class="add-on"><i class="icon-th"></i></span>
         </div>
     </div>
+    <div id="setAlarm" class="button ui" style="background:cyan;">Set</div>
         <label>
             {{lang.alarm.foot}}
         </label>   
