--- a/client/menu/menu.html
+++ b/client/menu/menu.html
@@ -53,26 +53,26 @@
                     </tr>
         </thead>
         <tbody>
-          
+                    
                     <tr>
                         <th>One</th>
-                        <td>x</td>
-                        <td>x</td>
-                        <td>x</td>
-                        <td>x</td>
-                        <td>x</td>
-                        <td>x</td>
-                        <td>x</td>
+                        <td>{{#if d0.first}} x {{else}} o {{/if}}</td>
+                        <td>{{#if d1.first}} x {{else}} o {{/if}}</td>
+                        <td>{{#if d2.first}} x {{else}} o {{/if}}</td>
+                        <td>{{#if d3.first}} x {{else}} o {{/if}}</td>
+                        <td>{{#if d4.first}} x {{else}} o {{/if}}</td>
+                        <td>{{#if d5.first}} x {{else}} o {{/if}}</td>
+                        <td>{{#if d6.first}} x {{else}} o {{/if}}</td>
                     </tr>
                     <tr>
                         <th>two</th>
-                        <td>x</td>
-                        <td>x</td>
-                        <td>x</td>
-                        <td>x</td>
-                        <td>x</td>
-                        <td>x</td>
-                        <td>x</td>
+                        <td>{{#if d0.second}} x {{else}} o {{/if}}</td>
+                        <td>{{#if d1.second}} x {{else}} o {{/if}}</td>
+                        <td>{{#if d2.second}} x {{else}} o {{/if}}</td>
+                        <td>{{#if d3.second}} x {{else}} o {{/if}}</td>
+                        <td>{{#if d4.second}} x {{else}} o {{/if}}</td>
+                        <td>{{#if d5.second}} x {{else}} o {{/if}}</td>
+                        <td>{{#if d6.second}} x {{else}} o {{/if}}</td>
                     </tr>
         </tbody>
       </table>
