--- a/client/menu/menu.html
+++ b/client/menu/menu.html
@@ -14,10 +14,10 @@
             <span class="add-on"><i class="icon-th"></i></span>
         </div>
     </div>
-    <div id="setAlarm" class="button ui" style="background:cyan;">Set</div>
-        <label>
-            {{lang.alarm.foot}}
-        </label>   
+    <label class="large-6 small-6 medium-6 columns">
+        {{lang.alarm.foot}}
+    </label>   
+    <div id="setAlarm" class="button ui large-6 small-6 medium-6 columns" style="background:cyan;">Set</div>
 </div> 
 {{#if user}}
          
@@ -55,7 +55,7 @@
         <tbody>
           
                     <tr>
-                        <th>One</th>
+                        <th>Started</th>
                         <td>x</td>
                         <td>x</td>
                         <td>x</td>
@@ -65,7 +65,7 @@
                         <td>x</td>
                     </tr>
                     <tr>
-                        <th>two</th>
+                        <th>Finish</th>
                         <td>x</td>
                         <td>x</td>
                         <td>x</td>
